# orchestration-cluster-api-python

./: .clinerules  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MAINTAINER.md  Makefile  README.md  RELEASE.md  SUMMARY.md  VERSION_FIX_GUIDE.md  apply-version-fix.sh  benchmark_results.json  bundle.py  commitlint.config.cjs  generate.py  generator-config-python-client.yaml  generator-config.yaml  missing-examples.json  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  renovate.json
.github/prompts/: add-missing-examples.prompt.md
.github/workflows/: assign-copilot-new-operations.yml  ci.yml  community-notify.yml  dependabot-auto-merge.yml  deploy-docs.yml  publish.yml  release-maintenance.yml  release.yml  test-org-membership.yml
demo/docusaurus-test/: .gitignore  Makefile  docusaurus.config.js  package-lock.json  package.json  sync-python-sdk.sh
demo/docusaurus-test/docs/: python-sdk-api.md
demo/v2/: BENCHMARK_GUIDE.md  QUICK_START.md  README.md  generate_benchmark_scenarios.py  job_worker.py  job_worker_benchmark.py  job_worker_original.py  run_benchmark_scenarios.py  run_fast_validation.sh
demo/v2/backpressure/: README.md  analyze_completions.py  analyze_floor.py  analyze_full_matrix.py  analyze_results.py  client_worker.py  compare_50c.py  compare_errors.py  compare_results.py  compare_throughput.py  evaluate.py  multi_client.py  recompute_jain.py  run_matrix.py  server_probe.py  single_client.py
demo/v2/results/: .gitignore  README.md  (+5 more)
demo/week_1/: cancel_processes.py  cpu_bound_workload.py  demo.py  io_bound_workload.py  multicore_workload.py  subprocess_workload.py
demo/week_2/: .env  DEPLOYMENT_SUCCESS.md  LOAN_PROCESS_README.md  MONITORING_GUIDE.md  README.md  RUNNING_WORKERS.md  __init__.py  deploy_loan_process.py  loan-application-process.bpmn  loan_workers.py  main.py  pyproject.toml  test_api.py
demo/week_2/camunda_demo_week2.egg-info/: PKG-INFO  SOURCES.txt
demo/week_2/frontend/: QUICKSTART.md  README.md  SETUP.md  app.js  index.html  styles.css
docker/: docker-compose.yaml
docs/: backpressure.md  configuration-resolver.md  error-handling-options.md  pluggable-auth.md  provided-auth-strategies.md
docs-sphinx/: async-client.rst  client.rst  conf.py  configuration.rst  index.rst  runtime.rst  types.rst
examples/: additional_operations.py  admin_operations.py  agent_instance.py  authorization.py  batch_operation.py  decision.py  extended_operations.py  group.py  incident.py  job.py  message_signal.py  operation-map.json  process_instance.py  readme.py  role.py  tenant.py  user.py  user_task.py
external-spec/bundled/: rest-api.bundle.json  spec-metadata.json
hooks/: fix_element_instance_key.py  fix_str_model_import.py  flatten_client.py  generate_composite_alias_models.py  generate_semantic_types.py  patch_bundled_spec.py  patch_configuration.py  patch_invalid_imports.py  postprocess_example.py
hooks/post_gen/: 0025_emit_spec_hash.py  0050_strip_type0_suffix.py  0100_generate_typed_exceptions.py  0150_annotate_deprecated_enums.py  0200_raise_exceptions.py  0300_copy_runtime.py  0400_fix_element_instance_key.py  0450_tolerant_nullable_pop.py  0500_fix_str_model_import.py  0600_patch_invalid_imports.py  0700_generate_semantic_types.py  0800_generate_composite_alias_models.py  0900_flatten_client.py  1000_patch_semantic_types_in_models.py  1100_fix_attrs_typing.py  1200_fix_model_typing.py  1250_remove_unused_imports.py  1300_create_py_typed.py  1350_inject_examples.py  1375_reexport_models.py  1380_emit_deprecated_aliases.py  1400_generate_stubs.py  1450_drop_orphan_union_bases.py  _api_compat_alias_map.py  _identifier_guard.py
hooks/pre_gen/: 0050_strip_spec_defaults.py  0075_convert_unicode_regex.py  0100_patch_bundled_spec.py  0200_rename_body_to_data.py
hooks_shared/: copy_runtime.py  fix_str_model_import.py  generate_composite_alias_models.py  generate_semantic_types.py  patch_bundled_spec.py  patch_invalid_imports.py  postprocess_example.py
hooks_v1/: fix_tag_set.py  patch_configuration.py  patch_offset_pagination_init.py
hooks_v2/: 10_raise_exceptions.py  20_flatten_client.py
hooks_v2/post_gen/: 05_generate_typed_exceptions.py  10_raise_exceptions.py  20_flatten_client.py  30_patch_semantic_types_in_models.py  36_fix_model_typing.py  40_create_py_typed.py
hooks_v2/pre_gen/: 10_rename_body_to_data.py
runtime/: __init__.py  auth.py  backpressure.py  configuration_resolver.py  eventual.py  job_worker.py  logging.py  tls.py  typed_variables.py
scripts/: bundle-spec.sh  check_example_coverage.py  check_method_example_completeness.py  check_missing_ops.py  check_path_refs.py  generate_config_reference.py  generate_landing_page.py  postprocess_markdown.py  setup-hooks.sh  sync-readme-snippets.py
stubs/camunda_orchestration_sdk/: __init__.pyi  _spec_hash.pyi  client.pyi  errors.pyi  semantic_types.pyi  types.pyi
tests/acceptance/: conftest.py  test_backpressure.py  test_configuration_resolver.py  test_connected_job_context.py  test_default_tenant_ids.py  test_deployment.py  test_deprecated_aliases.py  test_docstrings_match_signatures.py  test_env_file_loading.py  test_eventual_consistency.py  test_get_status.py  test_hook_drop_orphan_union_bases.py  test_hook_fix_model_typing.py  test_identifier_guard.py  test_imports.py  test_job_worker.py  test_job_worker_resources.py  test_job_worker_task_tracking.py  test_mtls.py  test_pluggable_auth.py  test_spec_hash.py  test_typed_variables.py  test_worker_defaults.py
tests/integration/: test_connected_job_context.py  test_job_worker.py  test_seachProcessInstances.py  test_search_process_instances.py  test_search_process_instances_filters.py  test_search_variables_as_dto.py  test_topology.py
tests/unit/: test_job_worker_logic.py  test_semantic_types.py
(+1083 files in other folders)
