[project]
name = "camunda-orchestration-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josh Wulf", email = "josh.wulf@camunda.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "attrs>=21.3.0",
    "pydantic>=2",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.7.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "generated"

[tool.setuptools.packages.find]
where = ["generated"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0",
    "openapi-python-client>=0.21.0",
    "jsonref>=1.1.0",
]
