[project]
name = "camunda-orchestration-sdk"
version = "10.0.0.dev0"
description = "Python client for Camunda 8 Orchestration Cluster API"
readme = "README.md"
authors = [
    { name = "Josh Wulf", email = "josh.wulf@camunda.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "attrs>=21.3.0",
    "pydantic>=2",
    "python-dateutil>=2.8.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.0",
]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = true
venvPath = "."
venv = ".venv"
extraPaths = ["generated"]
exclude = [
    "demo",
    "scripts",
    ".venv",
    "**/__pycache__",
    "**/node_modules", 
    "**/.*"
]

[tool.ruff]
extend-exclude = [
    "generated",
    "demo",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "generated"

[tool.setuptools.packages.find]
where = ["generated"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0",
    "openapi-python-client>=0.21.0",
    "jsonref>=1.1.0",
    "pyright>=1.1.407",
    "psutil>=5.9.0",
    "pydantic-settings>=2.12.0",
    "sphinx>=8.0.0",
    "sphinx-markdown-builder>=0.6.0",
    "sphinx-book-theme>=1.1.0",
]
ci = [
    "python-semantic-release>=9.15.0",
]
itest = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
commit_message = "chore(release): {version} [skip ci]"
upload_to_pypi = false
upload_to_release = true
tag_format = "v{version}"

# Branch configuration
# - main: alpha prereleases (dev pre-releases on PyPI)
# - stable/<major>: stable releases
# SDK major tracks Camunda server minor (server 8.9 → SDK 9.x).
[tool.semantic_release.branches.main]
match = "main"
prerelease = true
prerelease_token = "dev"

[tool.semantic_release.branches."stable/*"]
match = "^stable/.*$"
prerelease = false

# Standard semantic versioning:
# Patch: fix, perf, revert
# Minor: feat
# Major: BREAKING CHANGE footer
[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
    "revert",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "revert"]
